syntax="proto3";

package chat;

option go_package="./pb";

service ChatService{
    rpc GetChats(GetChatReq) returns (GetChatRes) {};
}

message Message {
    string MessageID = 1;
    string sender_id = 2;
    string recipient_id = 3;
    string content = 4;
    string timestamp = 5;
    string type = 6;
    string tag = 7;
    string status = 8;
}

message GetChatReq{
    string sender_id = 1;
    string reciever_id = 2;
}

message GetChatRes {
    repeated Message Chat =1;
}



